released ui flickering fix

--- a/src/routes/MetaDetails/VideosList/Video/styles.less
+++ b/src/routes/MetaDetails/VideosList/Video/styles.less
@@ -71,6 +71,7 @@
             .released-container {
                 flex: 1;
                 margin-right: 0.5rem;
+                padding: 0.2rem 0;
                 font-size: 0.8rem;
                 font-weight: 500;
                 white-space: nowrap;
